# Medical-Research-GraphRAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: documentation.html  documentation.md  evidence_ledger.md  handbook.md  zero_to_hero_study_handbook.md
graphs/: community_partition.json  community_summaries.json
notebooks/: NB01_Data_Exploration.executed.ipynb  NB01_Data_Exploration.ipynb  NB01_Data_Exploration.py  NB01_data_exploration.executed.ipynb  NB01_data_exploration.ipynb  NB01_data_exploration.py  NB02_Chroma_GraphRAG.executed.ipynb  NB02_Chroma_GraphRAG.ipynb  NB02_Chroma_GraphRAG.py  NB02_chunking_embedding.executed.ipynb  NB02_chunking_embedding.ipynb  NB02_chunking_embedding.py  NB03_Pinecone_GraphRAG.executed.ipynb  NB03_Pinecone_GraphRAG.ipynb  NB03_Pinecone_GraphRAG.py  NB03_graph_construction.executed.ipynb  NB03_graph_construction.ipynb  NB03_graph_construction.py  NB04_Agentic_GraphRAG.executed.ipynb  NB04_Agentic_GraphRAG.ipynb  NB04_Agentic_GraphRAG.py  NB04_vector_store_retrieval.ipynb  NB04_vector_store_retrieval.py  NB05_Evaluation.executed.ipynb  NB05_Evaluation.ipynb  NB05_Evaluation.py  NB05_full_pipeline_evaluation.ipynb  NB05_full_pipeline_evaluation.py  NB06_Hybrid_RAG.executed.ipynb  NB06_Hybrid_RAG.ipynb  NB06_Hybrid_RAG.py  NB07_CRAG.executed.ipynb  NB07_CRAG.ipynb  NB07_CRAG.py  NB08_Multimodal_RAG.executed.ipynb  NB08_Multimodal_RAG.ipynb  NB08_Multimodal_RAG.py  NB09_Multimodal_RAG_OCR_CLI.executed.ipynb  NB09_Multimodal_RAG_OCR_CLI.ipynb  NB09_Multimodal_RAG_OCR_CLI.py  (+6 more)
scripts/: execute_additional_notebooks.sh  execute_notebooks.sh  (+3 more)
src/: utils.py  (+19 more)
(+80 files in other folders)
