[project]
name = "medical-research-graphrag"
version = "0.1.0"
description = "End-to-end GraphRAG and Agentic RAG medical research assistant using MedMentions"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
  "bert-score>=0.3.13",
  "chromadb>=0.5.5",
  "datasets>=3.4.1",
  "duckduckgo-search>=8.0.0",
  "ipykernel>=6.29.5",
  "jupyter>=1.0.0",
  "jupytext>=1.19.3",
  "langgraph>=0.2.40",
  "loguru>=0.7.2",
  "matplotlib>=3.9.2",
  "nbconvert>=7.16.4",
  "nbformat>=5.10.4",
  "networkx>=3.3",
  "nltk>=3.9.1",
  "numpy>=1.26.4",
  "openpyxl>=3.1.5",
  "ollama>=0.3.3",
  "pandas>=2.2.2",
  "pinecone>=5.4.0",
  "polars>=1.11.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "python-louvain>=0.16",
  "requests>=2.32.3",
  "rouge-score>=0.1.2",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "seaborn>=0.13.2",
  "tqdm>=4.66.5",
  "transformers>=4.46.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]
finetune = [
  "accelerate>=0.34.2",
  "bitsandbytes>=0.44.1",
  "peft>=0.13.2",
  "sentencepiece>=0.2.0",
  "trl>=0.11.4",
  "unsloth>=2025.6.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]
